--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.6"
 djangorestframework-simplejwt = "^5.2.2"
+django-cors-headers = "^4.2.0"
 
 
 [build-system]
