--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.6"
 djangorestframework-simplejwt = "^5.2.2"
 django-cors-headers = "^4.2.0"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
