добавил тесты и flake8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ celery = "^5.3.1"
 redis = "^4.6.0"
 django-celery-beat = "^2.5.0"
 flake8-for-pycharm = "^0.4.1"
+coverage = "^7.2.7"
 
 
 [build-system]
